policies/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
  annotations:
    policies.kyverno.io/title: Require Signed Images
    policies.kyverno.io/description: >-
      Blocks any container image from being deployed unless it is cryptographically 
      signed by our private Cosign key.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-image-signature
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
          - "ghcr.io/sairajg8/*"
          - "docker.io/*"
          - "nginx*"
        attestors:
        - entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE+yyDdijbizPpnobJVblbpDYdy4XZ
[...]
                -----END PUBLIC KEY-----
